--- a/apps/templateApp/index.html
+++ b/apps/templateApp/index.html
@@ -10,39 +10,20 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>title </title>
+    <title>标题</title>
     <meta name="viewport" content="width=device-width">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="../../resource/css/bootstrap.css">
-    <link rel="stylesheet" href="../../resource/css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="../../resource/css/broada.css">
 
     <link rel="stylesheet/less" href="less/main.less">
-    <script src="../../resource/jslib/less.js"></script>
+    <script src="../../resource/jslib/3rdPart/less.js"></script>
     <!--<link rel="stylesheet" href="css/main.css">-->
 
-    <script src="../../resource/jslib/modernizr-2.6.2.min.js"></script>
-    <script src="../../resource/jslib/respond.min.js"></script>
+    <script src="requireDefaultConfig.js"></script>
+    <script src="../../resource/jslib/broada.js" data-main="app"></script>
 </head>
-<body class="userMgr">
-<script type="text/x-handlebars" data-template-name='application'>
-  //todo:这是一个样板app.在这里写你应用的视图模板
-</script>
-<script src="../../resource/jslib/require.min.js"></script>
-<script>
-    require.config({
-        baseUrl:"js",
-        paths:{
-            jslib:'../../../resource/jslib'
-        },
-        shim:{
-            'jslib/bootstrap':['jslib/jquery'],
-            'jslib/ember':['jslib/jquery', 'jslib/handlebars'],
-            'jslib/ember.rest':['jslib/ember']
-        }
-    });
-    require(["app"]);
-</script>
+<body class="templateApp">
 </body>
 </html>
